--- a/codes/Speech Processing.ipynb
+++ b/codes/Speech Processing.ipynb
@@ -748,6 +748,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exporting and reformatting audio files\n",
+    "- If we've made some changes to our audio files, or if they've got the wrong file extension, we can use PyDub to export and save them as new audio files.\n",
+    "- We can do this by using the `.export()` function on any instance of an AudioSegment we've created. The export() function takes two parameters, out_f, or the destination file path of our audio file and format, the format we'd like our new audio file to be. Both of these are strings. format is \"mp3\" by default so be sure to change it if we need. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.BufferedRandom name='mp3_file.wav'>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pydub\n",
+    "from pydub import AudioSegment\n",
+    "AudioSegment.ffmpeg = \"ffmpeg.exe\"\n",
+    "AudioSegment.ffprobe = \"ffprobe.exe\"\n",
+    "# Import the .mp3 file\n",
+    "mp3_file = AudioSegment.from_file('mp3_file_.mp3')\n",
+    "\n",
+    "# Export the .mp3 file as wav\n",
+    "mp3_file.export(out_f=\"mp3_file.wav\",\n",
+    "                format=\"wav\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finding PyDub stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels: 2\n",
+      "Sample width: 2\n",
+      "Frame rate (sample rate): 48000\n",
+      "Frame width: 4\n",
+      "Length (ms): 3519\n"
+     ]
+    }
+   ],
+   "source": [
+    "def show_pydub_stats(filename):\n",
+    "    \"\"\"Returns different audio attributes related to an audio file.\"\"\"\n",
+    "    # Create AudioSegment instance\n",
+    "    audio_segment = AudioSegment.from_file(filename)\n",
+    "\n",
+    "    # Print audio attributes and return AudioSegment instance\n",
+    "    print(f\"Channels: {audio_segment.channels}\")\n",
+    "    print(f\"Sample width: {audio_segment.sample_width}\")\n",
+    "    print(f\"Frame rate (sample rate): {audio_segment.frame_rate}\")\n",
+    "    print(f\"Frame width: {audio_segment.frame_width}\")\n",
+    "    print(f\"Length (ms): {len(audio_segment)}\")\n",
+    "    return audio_segment\n",
+    "\n",
+    "# Try the function\n",
+    "call_1_audio_segment = show_pydub_stats('mp3_file.wav')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
